Fix for bug 212090. nsInMemoryDataSource:GetSource() doesn't iterate over assertions correctly. r=ben, sr=ben